# gcertc

./: .gitignore  README.md  certificate.py  config.py  gcertc.py  pyproject.toml
