[project]
name = "gcertc"
version = "0.1.0"
description = "Get the certificate chain from a domain"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Arizona Edwards" }
]
dependencies = [
    "pyOpenSSL>=23.0.0",
    "cryptography>=41.0.0",
    "certifi>=2023.0.0",
]

[project.scripts]
gcertc = "gcertc:main"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["gcertc"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
